# distributor

./: .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md
.github/workflows/: mainnet-beta.yml  master.yml
api/: Cargo.toml  run_api.sh
api/src/: cache.rs  error.rs  main.rs  router.rs
cli/: Cargo.toml
merkle-tree/src/: airdrop_merkle_tree.rs  csv_entry.rs  tree_node.rs  utils.rs
programs/merkle-distributor/: Cargo.toml
programs/merkle-distributor/src/: lib.rs
programs/merkle-distributor/src/instructions/: claim_locked.rs  close_claim_status.rs  new_claim.rs  new_distributor.rs
programs/merkle-distributor/src/state/: claim_status.rs  claimed_event.rs  merkle_distributor.rs
test/: requirements.txt
ts-sdk/: .gitignore  bun.lockb  package.json
ts-sdk/example/: example.ts  exampleClaimLocked.ts  utils.ts
ts-sdk/src/: index.ts
